--- a/No-Gifts-By-Santa/AppShell.xaml
+++ b/No-Gifts-By-Santa/AppShell.xaml
@@ -4,11 +4,11 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:No_Gifts_By_Santa"
-    Title="No_Gifts_By_Santa">
+    xmlns:view="clr-namespace:No_Gifts_By_Santa.MVVM.View"
+    Title="No Gifts By Santa">
 
     <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
+        ContentTemplate="{DataTemplate view:MenuView}"
         Route="MainPage" />
 
 </Shell>
