--- a/No-Gifts-By-Santa/MVVM/View/SettingsView.xaml
+++ b/No-Gifts-By-Santa/MVVM/View/SettingsView.xaml
@@ -1,17 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+<ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="No_Gifts_By_Santa.MVVM.View.SettingsView">
     
-    <ContentPage.Background>
+    <ContentView.Background>
         <LinearGradientBrush EndPoint="0,1">
             <GradientStop Color="#ffffff" Offset="0.0" />
             <GradientStop Color="#F007FE" Offset="1.0" />
         </LinearGradientBrush>
-    </ContentPage.Background>
+    </ContentView.Background>
     
-    <ContentPage.Content>
+    <ContentView.Content>
         
-    </ContentPage.Content>
-</ContentPage>
+    </ContentView.Content>
+</ContentView>
