Adding the Basic structure of the Level Overview, there we wanted to have for each day before christmas, one day or in other words "level"

--- a/No-Gifts-By-Santa/MVVM/View/MenuView.xaml
+++ b/No-Gifts-By-Santa/MVVM/View/MenuView.xaml
@@ -49,7 +49,7 @@
                         Padding="0"
                         Margin="10"
                         Content="{Binding Popup}" />
-                    <Button Text="x" HorizontalOptions="End" VerticalOptions="Start" Margin="5" Command="{Binding _closePopup}"/>
+                    <Button Text="x" HorizontalOptions="End" VerticalOptions="Start" Margin="5" Command="{Binding _closePopup}" BackgroundColor="Brown"/>
                 </Grid>
             </Border>
         </AbsoluteLayout>
