--- a/No-Gifts-By-Santa/MVVM/View/LevelView.xaml
+++ b/No-Gifts-By-Santa/MVVM/View/LevelView.xaml
@@ -12,6 +12,46 @@
     </ContentView.Background>
     
     <ContentView.Content>
-        
+        <Grid x:Name="Grid" Padding="20">
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Button Grid.Column="0" Grid.Row="0" Text="1" Margin="5"/>
+            <Button Grid.Column="1" Grid.Row="0" Text="2" Margin="5"/>
+            <Button Grid.Column="2" Grid.Row="0" Text="3" Margin="5"/>
+            <Button Grid.Column="3" Grid.Row="0" Text="4" Margin="5"/>
+            <Button Grid.Column="4" Grid.Row="0" Text="5" Margin="5"/>
+            <Button Grid.Column="5" Grid.Row="0" Text="6" Margin="5"/>
+            <Button Grid.Column="5" Grid.Row="1" Text="7" Margin="5"/>
+            <Button Grid.Column="5" Grid.Row="2" Text="8" Margin="5"/>
+            <Button Grid.Column="5" Grid.Row="3" Text="9" Margin="5"/>
+            <Button Grid.Column="4" Grid.Row="3" Text="10" Margin="5"/>
+            <Button Grid.Column="3" Grid.Row="3" Text="11" Margin="5"/>
+            <Button Grid.Column="2" Grid.Row="3" Text="12" Margin="5"/>
+            <Button Grid.Column="1" Grid.Row="3" Text="13" Margin="5"/>
+            <Button Grid.Column="0" Grid.Row="3" Text="14" Margin="5"/>
+            <Button Grid.Column="0" Grid.Row="2" Text="15" Margin="5"/>
+            <Button Grid.Column="0" Grid.Row="1" Text="16" Margin="5"/>
+            <Button Grid.Column="1" Grid.Row="1" Text="17" Margin="5"/>
+            <Button Grid.Column="2" Grid.Row="1" Text="18" Margin="5"/>
+            <Button Grid.Column="3" Grid.Row="1" Text="19" Margin="5"/>
+            <Button Grid.Column="4" Grid.Row="1" Text="20" Margin="5"/>
+            <Button Grid.Column="4" Grid.Row="2" Text="21" Margin="5"/>
+            <Button Grid.Column="3" Grid.Row="2" Text="22" Margin="5"/>
+            <Button Grid.Column="2" Grid.Row="2" Text="23" Margin="5"/>
+            <Button Grid.Column="1" Grid.Row="2" Text="24" Margin="5"/>
+        </Grid>
     </ContentView.Content>
 </ContentView>
