Upgrading Everything to .net 10 (with a lot of trouble) and adding the base functions for dragable elements and items, with an example to test it

--- a/No-Gifts-By-Santa/MVVM/View/MenuView.xaml
+++ b/No-Gifts-By-Santa/MVVM/View/MenuView.xaml
@@ -21,7 +21,7 @@
     </ContentPage.BindingContext>
     
     <ContentPage.Content>
-        <AbsoluteLayout>
+        <AbsoluteLayout x:Name="Canvas">
             <Grid AbsoluteLayout.LayoutBounds="0,0,1,1"
                   AbsoluteLayout.LayoutFlags="All">
                 <VerticalStackLayout Spacing="12" HorizontalOptions="Center" VerticalOptions="Center">
