--- a/No-Gifts-By-Santa/MVVM/View/GameView.xaml
+++ b/No-Gifts-By-Santa/MVVM/View/GameView.xaml
@@ -1,9 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
-<ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="No_Gifts_By_Santa.MVVM.View.GameView">
-    <ContentView.Content>
-        
-    </ContentView.Content>
-</ContentView>
+    
+    <ContentPage.Background>
+        <LinearGradientBrush EndPoint="0,1">
+            <GradientStop Color="#ffffff" Offset="0.0" />
+            <GradientStop Color="#FF00F4BE" Offset="1.0" />
+        </LinearGradientBrush>
+    </ContentPage.Background>
+    
+    <ContentPage.Content>
+        <AbsoluteLayout x:Name="Canvas">
+            <Label>Level: </Label>
+        </AbsoluteLayout>
+    </ContentPage.Content>
+</ContentPage>
