--- a/No-Gifts-By-Santa/MVVM/View/LevelView.xaml
+++ b/No-Gifts-By-Santa/MVVM/View/LevelView.xaml
@@ -28,7 +28,7 @@
                 <ColumnDefinition/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <Button Grid.Column="0" Grid.Row="0" Text="1" Margin="5"/>
+            <Button Grid.Column="0" Grid.Row="0" Text="1" Margin="5" Clicked="Button_OnClicked"/>
             <Button Grid.Column="1" Grid.Row="0" Text="2" Margin="5"/>
             <Button Grid.Column="2" Grid.Row="0" Text="3" Margin="5"/>
             <Button Grid.Column="3" Grid.Row="0" Text="4" Margin="5"/>
